--- a/templates/LifeInADayAtFacebook/login.html
+++ b/templates/LifeInADayAtFacebook/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Login</title>
     {% load static %}
-    <link href="{% static  'LifeInADayAtFacebook/css/Login.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% 'LifeInADayAtFacebook/' static  'LifeInADayAtFacebook/css/Login.css' %}" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
