all url hard coded to fit into heroku

--- a/templates/LifeInADayAtFacebook/demo.html
+++ b/templates/LifeInADayAtFacebook/demo.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <title>Life In A Day At Facebook</title>
     {% load static %}
-    <link href="{% static  'LifeInADayAtFacebook/css/LifeInADayAtFacebook.css' %}" rel="stylesheet" type="text/css">
-    <link href="{% static  'LifeInADayAtFacebook/css/UserPostTemplate.css' %}" rel="stylesheet" type="text/css">
-    <link href="{% static  'LifeInADayAtFacebook/css/app.css' %}" rel="stylesheet" type="text/css">
+    <link href="https://lifeinadayatfacebook.herokuapp.com/LifeInADayAtFacebook/static/LifeInADayAtFacebook/css/LifeInADayAtFacebook.css" rel="stylesheet" type="text/css">
+    <link href="https://lifeinadayatfacebook.herokuapp.com/LifeInADayAtFacebook/static/LifeInADayAtFacebook/css/UserPostTemplate.css" rel="stylesheet" type="text/css">
+    <link href="https://lifeinadayatfacebook.herokuapp.com/LifeInADayAtFacebook/static/LifeInADayAtFacebook/css/app.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-tour/0.11.0/css/bootstrap-tour-standalone.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="{% static 'LifeInADayAtFacebook/js/LifeInADayAtFacebook.js' %}"></script>
+    <script src="https://lifeinadayatfacebook.herokuapp.com/LifeInADayAtFacebook/static/LifeInADayAtFacebook/js/LifeInADayAtFacebook.js"></script>
 
 
     <script src="//d3js.org/d3.v3.min.js"></script>
