calling url maker changes

--- a/templates/LifeInADayAtFacebook/demo.html
+++ b/templates/LifeInADayAtFacebook/demo.html
@@ -91,7 +91,7 @@
 
         //calling api
         function callingUrlMaker(dateFrom, dateTo) {
-            var url = "{{ host}}{{"PostAndCommentsByCreatedDateDemo/"}}" + timeFormatter(dateFrom) + "/" + timeFormatter(dateTo);
+            var url = "https://lifeinadayatfacebook.herokuapp.com/LifeInADayAtFacebook/PostAndCommentsByCreatedDateDemo/" + timeFormatter(dateFrom) + "/" + timeFormatter(dateTo);
             return url;
         }
 
